--- a/giaidau.html
+++ b/giaidau.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="js/bootstrap.min.js">
+    <!-- <link rel="stylesheet" type="text/css" href="js/bootstrap.min.js"> -->
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <script src="js/jquery-3.3.1.min.js" type="text/javascript"></script>
@@ -19,7 +19,7 @@
 		</div>
 	</div>
 	<div class="all-box">
-		<h1 class="title-info">Giải đấu sắp diễn ra</h1>
+		<h2 style="margin-top: 60px;" class="title-info">Giải đấu sắp diễn ra</h2>
 		<div class="content">
 			<div class="container">
 				<div class="row">
@@ -34,7 +34,7 @@
 								<p class="tournaments-title">
 									vô địch golf trung cao niên quốc gia
 								</p>
-								<div class="mb">
+								<div class="tournaments-system-content">
 									<span class="main-1">
 										<p><i class="fa fa-calendar "></i> 15/03/2020</p>
 										<p><i class="fa fa-map-marker"></i> Sân FLC Thanh Hóa</p>
@@ -43,14 +43,19 @@
 										<p><i class="fa fa-file-pdf-o"></i> <a href="#">Điều lệ giải</a></p>
 										<p><i class="fa fa-history"></i> <a href="#">Lịch sử giải đấu</a></p>
 									</span>
+									<span class="main-2">
+										<p><i class="fa fa-user"></i> 50/100</p>
+									</span>
 								</div>
-								<div class="tournaments-button col-lg-4 col-xs-6">
-									<p class="tournaments-price1">5.000.000 VND</p>
-									<button class="button-price1">Tham gia</button>
-								</div>
-								<div class="tournaments-button col-lg-4 col-xs-6">
-									<p class="tournaments-price2">5.000.000 VND</p>
-									<button class="button-price2">Tham gia</button>
+								<div style="display: flex; width: 100%; padding-bottom: 20px;" class="toumaf">
+									<div style="margin-right: 3%; width: 180px;" class="tournaments-button">
+										<p style="font-size: 20px;"class="tournaments-price1">5.000.000 VND</p>
+									<button  class="button-price1">Tham gia</button>
+									</div>
+									<div style="width: 180px" class="tournaments-button">
+										<p style="font-size: 20px;" class="tournaments-price2">5.000.000 VND</p>
+										<button   class="button-price2">Vé vào cửa</button>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -63,12 +68,12 @@
 	<Br>
 	<Br>
 	<div class="all-box">
-		<h1 class="title-info">Hệ thống giải đấu</h1>
+		<h2 class="title-info">Hệ thống giải đấu</h2>
 		<div class="content">
 			<div class="container">
 				<div class="row">
 					<div class="tournaments">
-						<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+						<div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
 							<div class="tournaments-system">
 								<div class="tournaments-system-title">
 									<div class="logo">
@@ -79,7 +84,7 @@
 									</div>
 								</div>
 								<div class="tournaments-system-content">
-									<span class="main-1">
+									<span class="main-1 ap">
 										<p><i class="fa fa-calendar "></i> 15/03/2020</p>
 										<p><i class="fa fa-map-marker"></i> Sân FLC Thanh Hóa</p>
 									</span>
@@ -88,11 +93,11 @@
 										<p><i class="fa fa-history"></i> <a href="#">Lịch sử giải đấu</a></p>
 									</span>
 								</div>
-								<div class="tournaments-button col-lg-6 col-xs-6">
+								<div class="tournaments-button col-lg-6 col-md-6 col-sm-6 col-xs-6">
 									<p class="tournaments-price1">5.000.000 VND</p>
 									<button class="button-price1">Tham gia</button>
 								</div>
-								<div class="tournaments-button col-lg-6 col-xs-6">
+								<div class="tournaments-button col-lg-6 col-md-6 col-sm-6 col-xs-6">
 									<p class="tournaments-price2">5.000.000 VND</p>
 									<button class="button-price2">Tham gia</button>
 								</div>
@@ -100,18 +105,18 @@
 						</div>
 					</div>
 					<div class="tournaments">
-						<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+						<div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
 							<div class="tournaments-system">
 								<div class="tournaments-system-title">
 									<div class="logo">
-										<img style="width: 94px; height: 67px" class="img-responsive" src="img/cn.png">
+										<img style="width: 73px; height: 67px" class="img-responsive" src="img/vn.png">
 									</div>
 									<div class="name">
-										<p>vô địch golf trung - cao niên quốc gia</p>
+										<p>Vô địch golf các câu lạc bộ việt nam</p>
 									</div>
 								</div>
 								<div class="tournaments-system-content">
-									<span class="main-1">
+									<span class="main-1 ap">
 										<p><i class="fa fa-calendar "></i> 15/03/2020</p>
 										<p><i class="fa fa-map-marker"></i> Sân FLC Thanh Hóa</p>
 									</span>
@@ -120,11 +125,11 @@
 										<p><i class="fa fa-history"></i> <a href="#">Lịch sử giải đấu</a></p>
 									</span>
 								</div>
-								<div class="tournaments-button col-lg-6 col-xs-6">
+								<div class="tournaments-button col-lg-6 col-md-6 col-sm-6 col-xs-6">
 									<p class="tournaments-price1">5.000.000 VND</p>
 									<button class="button-price1">Tham gia</button>
 								</div>
-								<div class="tournaments-button col-lg-6 col-xs-6">
+								<div class="tournaments-button col-lg-6 col-md-6 col-sm-6 col-xs-6">
 									<p class="tournaments-price2">5.000.000 VND</p>
 									<button class="button-price2">Tham gia</button>
 								</div>
@@ -132,18 +137,18 @@
 						</div>
 					</div>
 					<div class="tournaments">
-						<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+						<div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
 							<div class="tournaments-system">
 								<div class="tournaments-system-title">
 									<div class="logo">
-										<img style="width: 90px; height: 51px" class="img-responsive" src="img/vao.png">
+										<img style="width: 73px; height: 67px" class="img-responsive" src="img/vn.png">
 									</div>
 									<div class="name">
-										<p>Vô địch golf các clb việt nam</p>
+										<p>Vô địch golf các câu lạc bộ việt nam</p>
 									</div>
 								</div>
 								<div class="tournaments-system-content">
-									<span class="main-1">
+									<span class="main-1 ap">
 										<p><i class="fa fa-calendar "></i> 15/03/2020</p>
 										<p><i class="fa fa-map-marker"></i> Sân FLC Thanh Hóa</p>
 									</span>
@@ -152,11 +157,11 @@
 										<p><i class="fa fa-history"></i> <a href="#">Lịch sử giải đấu</a></p>
 									</span>
 								</div>
-								<div class="tournaments-button col-lg-6 col-xs-6">
+								<div class="tournaments-button col-lg-6 col-md-6 col-sm-6 col-xs-6">
 									<p class="tournaments-price1">5.000.000 VND</p>
 									<button class="button-price1">Tham gia</button>
 								</div>
-								<div class="tournaments-button col-lg-6 col-xs-6">
+								<div class="tournaments-button col-lg-6 col-md-6 col-sm-6 col-xs-6">
 									<p class="tournaments-price2">5.000.000 VND</p>
 									<button class="button-price2">Tham gia</button>
 								</div>
@@ -164,18 +169,18 @@
 						</div>
 					</div>
 					<div class="tournaments">
-						<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+						<div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
 							<div class="tournaments-system">
 								<div class="tournaments-system-title">
 									<div class="logo">
-										<img style="width: 73px; height: 67px" class="img-responsive" src="img/vlao.png">
+										<img style="width: 73px; height: 67px" class="img-responsive" src="img/vn.png">
 									</div>
 									<div class="name">
-										<p>Vô địch golf các clb việt nam</p>
+										<p>Vô địch golf các câu lạc bộ việt nam</p>
 									</div>
 								</div>
 								<div class="tournaments-system-content">
-									<span class="main-1">
+									<span class="main-1 ap">
 										<p><i class="fa fa-calendar "></i> 15/03/2020</p>
 										<p><i class="fa fa-map-marker"></i> Sân FLC Thanh Hóa</p>
 									</span>
@@ -184,11 +189,11 @@
 										<p><i class="fa fa-history"></i> <a href="#">Lịch sử giải đấu</a></p>
 									</span>
 								</div>
-								<div class="tournaments-button col-lg-6 col-xs-6">
+								<div class="tournaments-button col-lg-6 col-md-6 col-sm-6 col-xs-6">
 									<p class="tournaments-price1">5.000.000 VND</p>
 									<button class="button-price1">Tham gia</button>
 								</div>
-								<div class="tournaments-button col-lg-6 col-xs-6">
+								<div class="tournaments-button col-lg-6 col-md-6 col-sm-6 col-xs-6">
 									<p class="tournaments-price2">5.000.000 VND</p>
 									<button class="button-price2">Tham gia</button>
 								</div>
@@ -196,18 +201,18 @@
 						</div>
 					</div>
 					<div class="tournaments">
-						<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+						<div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
 							<div class="tournaments-system">
 								<div class="tournaments-system-title">
 									<div class="logo">
-										<img style="width: 73px; height: 67px" class="img-responsive" src="img/frame.png">
+										<img style="width: 73px; height: 67px" class="img-responsive" src="img/vn.png">
 									</div>
 									<div class="name">
-										<p>Vô địch golf các clb việt nam</p>
+										<p>Vô địch golf các câu lạc bộ việt nam</p>
 									</div>
 								</div>
 								<div class="tournaments-system-content">
-									<span class="main-1">
+									<span class="main-1 ap">
 										<p><i class="fa fa-calendar "></i> 15/03/2020</p>
 										<p><i class="fa fa-map-marker"></i> Sân FLC Thanh Hóa</p>
 									</span>
@@ -216,11 +221,11 @@
 										<p><i class="fa fa-history"></i> <a href="#">Lịch sử giải đấu</a></p>
 									</span>
 								</div>
-								<div class="tournaments-button col-lg-6 col-xs-6">
+								<div class="tournaments-button col-lg-6 col-md-6 col-sm-6 col-xs-6">
 									<p class="tournaments-price1">5.000.000 VND</p>
 									<button class="button-price1">Tham gia</button>
 								</div>
-								<div class="tournaments-button col-lg-6 col-xs-6">
+								<div class="tournaments-button col-lg-6 col-md-6 col-sm-6 col-xs-6">
 									<p class="tournaments-price2">5.000.000 VND</p>
 									<button class="button-price2">Tham gia</button>
 								</div>
@@ -228,18 +233,18 @@
 						</div>
 					</div>
 					<div class="tournaments">
-						<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+						<div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
 							<div class="tournaments-system">
 								<div class="tournaments-system-title">
 									<div class="logo">
-										<img style="width: 73px; height: 67px" class="img-responsive" src="img/vmc.png">
+										<img style="width: 73px; height: 67px" class="img-responsive" src="img/vn.png">
 									</div>
 									<div class="name">
-										<p>Vô địch golf các clb việt nam</p>
+										<p>Vô địch golf các câu lạc bộ việt nam</p>
 									</div>
 								</div>
 								<div class="tournaments-system-content">
-									<span class="main-1">
+									<span class="main-1 ap">
 										<p><i class="fa fa-calendar "></i> 15/03/2020</p>
 										<p><i class="fa fa-map-marker"></i> Sân FLC Thanh Hóa</p>
 									</span>
@@ -248,11 +253,11 @@
 										<p><i class="fa fa-history"></i> <a href="#">Lịch sử giải đấu</a></p>
 									</span>
 								</div>
-								<div class="tournaments-button col-lg-6 col-xs-6">
+								<div class="tournaments-button col-lg-6 col-md-6 col-sm-6 col-xs-6">
 									<p class="tournaments-price1">5.000.000 VND</p>
 									<button class="button-price1">Tham gia</button>
 								</div>
-								<div class="tournaments-button col-lg-6 col-xs-6">
+								<div class="tournaments-button col-lg-6 col-md-6 col-sm-6 col-xs-6">
 									<p class="tournaments-price2">5.000.000 VND</p>
 									<button class="button-price2">Tham gia</button>
 								</div>
@@ -263,9 +268,10 @@
 			</div>
 		</div>
 	</div>
-	<footer>
+<footer>
 		<div class="all-box">
-			<div class="row">
+			<div style="background: none" class="container">
+				<div class="row">
 				<div class="col-lg-2 col-md-12 col-sm-12 col-xs-12">
 					<div class="logo-footer">
 						<img src="img/logo-footer.png">
@@ -287,7 +293,9 @@
 					<p class="Copyright"> Copyright © 2018 by VGSholding</p>
 				</div>
 			</div>
+			</div>
 		</div>
 	</footer>
+
 </body>
 </html>
