--- a/gtgiaidau.html
+++ b/gtgiaidau.html
@@ -29,20 +29,26 @@
 					</div>
 					<div class="am"">
 						<div class="time-day">
-							<div class="col-lg-3 col-md-3 col-xs-6 col-xs-12"><p><i class="fa fa-calendar "></i> 15/03/2020</p></div>
-							<div class="col-lg-3 col-md-3 col-xs-6 col-xs-12"><p><i class="fa fa-map-marker"></i> Sân FLC Thanh Hóa</p></div>
-							<div class="col-lg-3 col-md-3 col-xs-6 col-xs-12"><p><i class="fa fa-file-pdf-o"></i> <a href="#">Điều lệ giải</a></p></div>
-							<div class="col-lg-3 col-md-3 col-xs-6 col-xs-12"><p><i class="fa fa-history"></i> <a href="#">Lịch sử giải đấu</a></p></div>
+							<div class="row">
+								<div class="col-lg-3 col-md-3 col-xs-6 col-xs-12"><p><i class="fa fa-calendar "></i> 15/03/2020</p></div>
+								<div class="col-lg-3 col-md-3 col-xs-6 col-xs-12"><p><i class="fa fa-map-marker"></i> Sân FLC Thanh Hóa</p></div>
+								<div class="col-lg-3 col-md-3 col-xs-6 col-xs-12"><p><i class="fa fa-file-pdf-o"></i> <a href="#">Điều lệ giải</a></p></div>
+								<div class="col-lg-3 col-md-3 col-xs-6 col-xs-12"><p><i class="fa fa-history"></i> <a href="#">Lịch sử giải đấu</a></p></div>
+							</div>
 						</div>
 					</div>
-					<div class="button-intro">
-						<div class="tournaments-button col-lg-6 col-xs-6">
-							<p class="tournaments-price1">5.000.000 VND</p>
-							<button class="button-price1">Tham gia</button>
+					<div style=" width: 95%" class="button-intro">
+						<div class="row">
+							<div style="text-align: right;" class="tournaments-button col-lg-6 col-xs-6">
+							<div class="div">
+								<p style="padding-right: 4%;" class="tournaments-price1">5.000.000 VND</p>
+							<button style="width: 100%;" class="button-price1">Tham gia</button>
+							</div>
 						</div>
-						<div class="tournaments-button col-lg-6 col-xs-6">
-							<p class="tournaments-price2">5.000.000 VND</p>
-							<button class="button-price2">Tham gia</button>
+						<div style="text-align: left;"  class="tournaments-button col-lg-6 col-xs-6">
+							<p style="padding-left: 4%;" class="tournaments-price2">5.000.000 VND</p>
+							<button style="width: 100%;" class="button-price2">Tham gia</button>
+						</div>
 						</div>
 					</div>
 				</div>
@@ -62,7 +68,8 @@
 						<p class="intro-desc-title">
 							Lịch sử giải đấu
 						</p>
-						<table class="table table-user">
+						<div class="table-responsive">
+								<table class="table table-user">
 						    <tr>
 						      <th width="500px">2018
 						      	<p><i class="fa fa-map-marker"></i> Sân FLC Thanh Hóa</p>
@@ -199,249 +206,6 @@
 						      </th>
 						    </tr>
 						    <tr>
-						      <th width="500px">2018
-						      	<p><i class="fa fa-map-marker"></i> Sân FLC Thanh Hóa</p>
-						      </th>
-						      <th width="270px">
-						      	<div class="media">
-								    <div class="media-left">
-								     	<img style="width: 50px;" src="img/markus.png">
-								    </div>
-								    <div class="media-body">
-								      <h4 class="media-heading">Trương Chí Quân</h4>
-								      <p>Bảng Việt Nam</p>
-								    </div>
-  								</div>
-						      </th>
-						       <th width="270px">
-						      	<div class="media">
-								    <div class="media-left">
-								     	<img style="width: 50px;" src="img/markus.png">
-								    </div>
-								    <div class="media-body">
-								      <h4 class="media-heading">Stuart McKinnon</h4>
-								      <p> Hồng Kông - Bảng Mở rộng</p>
-								    </div>
-  								</div>
-						      </th>
-						    </tr>
-						    <tr>
-						      <th width="500px">2018
-						      	<p><i class="fa fa-map-marker"></i> Sân FLC Thanh Hóa</p>
-						      </th>
-						      <th width="270px">
-						      	<div class="media">
-								    <div class="media-left">
-								     	<img style="width: 50px;" src="img/markus.png">
-								    </div>
-								    <div class="media-body">
-								      <h4 class="media-heading">Trương Chí Quân</h4>
-								      <p>Bảng Việt Nam</p>
-								    </div>
-  								</div>
-						      </th>
-						       <th width="270px">
-						      	<div class="media">
-								    <div class="media-left">
-								     	<img style="width: 50px;" src="img/markus.png">
-								    </div>
-								    <div class="media-body">
-								      <h4 class="media-heading">Stuart McKinnon</h4>
-								      <p> Hồng Kông - Bảng Mở rộng</p>
-								    </div>
-  								</div>
-						      </th>
-						    </tr>
-						    <tr>
-						      <th width="500px">2018
-						      	<p><i class="fa fa-map-marker"></i> Sân FLC Thanh Hóa</p>
-						      </th>
-						      <th width="270px">
-						      	<div class="media">
-								    <div class="media-left">
-								     	<img style="width: 50px;" src="img/markus.png">
-								    </div>
-								    <div class="media-body">
-								      <h4 class="media-heading">Trương Chí Quân</h4>
-								      <p>Bảng Việt Nam</p>
-								    </div>
-  								</div>
-						      </th>
-						       <th width="270px">
-						      	<div class="media">
-								    <div class="media-left">
-								     	<img style="width: 50px;" src="img/markus.png">
-								    </div>
-								    <div class="media-body">
-								      <h4 class="media-heading">Stuart McKinnon</h4>
-								      <p> Hồng Kông - Bảng Mở rộng</p>
-								    </div>
-  								</div>
-						      </th>
-						    </tr>
-						    <tr>
-						      <th width="500px">2018
-						      	<p><i class="fa fa-map-marker"></i> Sân FLC Thanh Hóa</p>
-						      </th>
-						      <th width="270px">
-						      	<div class="media">
-								    <div class="media-left">
-								     	<img style="width: 50px;" src="img/markus.png">
-								    </div>
-								    <div class="media-body">
-								      <h4 class="media-heading">Trương Chí Quân</h4>
-								      <p>Bảng Việt Nam</p>
-								    </div>
-  								</div>
-						      </th>
-						       <th width="270px">
-						      	<div class="media">
-								    <div class="media-left">
-								     	<img style="width: 50px;" src="img/markus.png">
-								    </div>
-								    <div class="media-body">
-								      <h4 class="media-heading">Stuart McKinnon</h4>
-								      <p> Hồng Kông - Bảng Mở rộng</p>
-								    </div>
-  								</div>
-						      </th>
-						    </tr>
-						    <tr>
-						      <th width="500px">2018
-						      	<p><i class="fa fa-map-marker"></i> Sân FLC Thanh Hóa</p>
-						      </th>
-						      <th width="270px">
-						      	<div class="media">
-								    <div class="media-left">
-								     	<img style="width: 50px;" src="img/markus.png">
-								    </div>
-								    <div class="media-body">
-								      <h4 class="media-heading">Trương Chí Quân</h4>
-								      <p>Bảng Việt Nam</p>
-								    </div>
-  								</div>
-						      </th>
-						       <th width="270px">
-						      	<div class="media">
-								    <div class="media-left">
-								     	<img style="width: 50px;" src="img/markus.png">
-								    </div>
-								    <div class="media-body">
-								      <h4 class="media-heading">Stuart McKinnon</h4>
-								      <p> Hồng Kông - Bảng Mở rộng</p>
-								    </div>
-  								</div>
-						      </th>
-						    </tr>
-						    	    <tr>
-						      <th width="500px">2018
-						      	<p><i class="fa fa-map-marker"></i> Sân FLC Thanh Hóa</p>
-						      </th>
-						      <th width="270px">
-						      	<div class="media">
-								    <div class="media-left">
-								     	<img style="width: 50px;" src="img/markus.png">
-								    </div>
-								    <div class="media-body">
-								      <h4 class="media-heading">Trương Chí Quân</h4>
-								      <p>Bảng Việt Nam</p>
-								    </div>
-  								</div>
-						      </th>
-						       <th width="270px">
-						      	<div class="media">
-								    <div class="media-left">
-								     	<img style="width: 50px;" src="img/markus.png">
-								    </div>
-								    <div class="media-body">
-								      <h4 class="media-heading">Stuart McKinnon</h4>
-								      <p> Hồng Kông - Bảng Mở rộng</p>
-								    </div>
-  								</div>
-						      </th>
-						    </tr>
-						    	    <tr>
-						      <th width="500px">2018
-						      	<p><i class="fa fa-map-marker"></i> Sân FLC Thanh Hóa</p>
-						      </th>
-						      <th width="270px">
-						      	<div class="media">
-								    <div class="media-left">
-								     	<img style="width: 50px;" src="img/markus.png">
-								    </div>
-								    <div class="media-body">
-								      <h4 class="media-heading">Trương Chí Quân</h4>
-								      <p>Bảng Việt Nam</p>
-								    </div>
-  								</div>
-						      </th>
-						       <th width="270px">
-						      	<div class="media">
-								    <div class="media-left">
-								     	<img style="width: 50px;" src="img/markus.png">
-								    </div>
-								    <div class="media-body">
-								      <h4 class="media-heading">Stuart McKinnon</h4>
-								      <p> Hồng Kông - Bảng Mở rộng</p>
-								    </div>
-  								</div>
-						      </th>
-						    </tr>
-						    	    <tr>
-						      <th width="500px">2018
-						      	<p><i class="fa fa-map-marker"></i> Sân FLC Thanh Hóa</p>
-						      </th>
-						      <th width="270px">
-						      	<div class="media">
-								    <div class="media-left">
-								     	<img style="width: 50px;" src="img/markus.png">
-								    </div>
-								    <div class="media-body">
-								      <h4 class="media-heading">Trương Chí Quân</h4>
-								      <p>Bảng Việt Nam</p>
-								    </div>
-  								</div>
-						      </th>
-						       <th width="270px">
-						      	<div class="media">
-								    <div class="media-left">
-								     	<img style="width: 50px;" src="img/markus.png">
-								    </div>
-								    <div class="media-body">
-								      <h4 class="media-heading">Stuart McKinnon</h4>
-								      <p> Hồng Kông - Bảng Mở rộng</p>
-								    </div>
-  								</div>
-						      </th>
-						    </tr>
-						    	    <tr>
-						      <th width="500px">2018
-						      	<p><i class="fa fa-map-marker"></i> Sân FLC Thanh Hóa</p>
-						      </th>
-						      <th width="270px">
-						      	<div class="media">
-								    <div class="media-left">
-								     	<img style="width: 50px;" src="img/markus.png">
-								    </div>
-								    <div class="media-body">
-								      <h4 class="media-heading">Trương Chí Quân</h4>
-								      <p>Bảng Việt Nam</p>
-								    </div>
-  								</div>
-						      </th>
-						       <th width="270px">
-						      	<div class="media">
-								    <div class="media-left">
-								     	<img style="width: 50px;" src="img/markus.png">
-								    </div>
-								    <div class="media-body">
-								      <h4 class="media-heading">Stuart McKinnon</h4>
-								      <p> Hồng Kông - Bảng Mở rộng</p>
-								    </div>
-  								</div>
-						      </th>
-						    </tr>
-						    	    <tr>
 						      <th width="500px">2018
 						      	<p><i class="fa fa-map-marker"></i> Sân FLC Thanh Hóa</p>
 						      </th>
@@ -496,6 +260,7 @@
 						      </th>
 						    </tr>
 						</table>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -504,10 +269,10 @@
 	<!-- //////He Thong giai dau///// -->
 	<Br>
 	<Br>
-
-	<footer>
+<footer>
 		<div class="all-box">
-			<div class="row">
+			<div style="background: none" class="container">
+				<div class="row">
 				<div class="col-lg-2 col-md-12 col-sm-12 col-xs-12">
 					<div class="logo-footer">
 						<img src="img/logo-footer.png">
@@ -528,6 +293,7 @@
 					</div>
 					<p class="Copyright"> Copyright © 2018 by VGSholding</p>
 				</div>
+			</div>
 			</div>
 		</div>
 	</footer>
