--- a/muave2.html
+++ b/muave2.html
@@ -29,17 +29,19 @@
 					</div>
 					<div class="am"">
 						<div class="time-day">
-							<div class="col-lg-3 col-md-3 col-xs-6 col-xs-12"><p><i class="fa fa-calendar "></i> 15/03/2020</p></div>
-							<div class="col-lg-3 col-md-3 col-xs-6 col-xs-12"><p><i class="fa fa-map-marker"></i> Sân FLC Thanh Hóa</p></div>
-							<div class="col-lg-3 col-md-3 col-xs-6 col-xs-12"><p><i class="fa fa-file-pdf-o"></i> <a href="#">Điều lệ giải</a></p></div>
-							<div class="col-lg-3 col-md-3 col-xs-6 col-xs-12"><p><i class="fa fa-history"></i> <a href="#">Lịch sử giải đấu</a></p></div>
+							<div class="row">
+								<div class="col-lg-3 col-md-3 col-xs-6 col-xs-12"><p><i class="fa fa-calendar "></i> 15/03/2020</p></div>
+								<div class="col-lg-3 col-md-3 col-xs-6 col-xs-12"><p><i class="fa fa-map-marker"></i> Sân FLC Thanh Hóa</p></div>
+								<div class="col-lg-3 col-md-3 col-xs-6 col-xs-12"><p><i class="fa fa-file-pdf-o"></i> <a href="#">Điều lệ giải</a></p></div>
+								<div class="col-lg-3 col-md-3 col-xs-6 col-xs-12"><p><i class="fa fa-history"></i> <a href="#">Lịch sử giải đấu</a></p></div>
+							</div>
 						</div>
 					</div>
-					<div style="padding-top: 0; border-top: none" class="am"">
+					<div style="padding-top: 0; border-top: none">
 						<p style="text-align: center;font-size: 24px;padding-top: 10px; font-weight: bold;color:  #0CACA7;">500.000 VND</p>
 					</div>
-					<div style="border:none" class="am"">
-						<p style="font-size: 18px;"><b>Thông tin đăng kí mua vé của bạn</b></p>
+					<div style="border:none; padding: 2%;">
+						<p style="font-size: 18px; width: 300px;"><b>Thông tin đăng kí mua vé của bạn</b></p>
 					<div class="info-user">
 						<p>Họ và tên: Phí Minh Mạnh </p>
 						<p>Số điện thoại: 0984888888</p>
@@ -66,20 +68,21 @@
 	</div>
 	<footer>
 		<div class="all-box">
-			<div class="row">
-				<div class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
-					<div style="width: 173px; height: 105px;">
+			<div style="background: none" class="container">
+				<div class="row">
+				<div class="col-lg-2 col-md-12 col-sm-12 col-xs-12">
+					<div class="logo-footer">
 						<img src="img/logo-footer.png">
 					</div>
 				</div>
-				<div class="col-lg-6 col-md-6 col-xs-12">
+				<div class="col-lg-6 col-md-12 col-xs-12">
 					<h5 style="font-weight: bold"> Mọi thông tin, đóng góp vui lòng liên hệ:</h5>
 					<p><i class="fa fa-map-marker"></i> VGS Event - Tầng 2, 101 ngách 5, ngõ 92 Nguyễn Khánh Toàn, Cầu Giấy, Hà Nội</p>
 					<p><i class="fa fa-phone"></i> Hotline: 0988888888</p>
 					<p><i class="fa fa-envelope-square"></i> Email: sponsor@vgsholding.com</p>
 				</div>
-				<div class="col-lg-4 col-md-4 col-xs-12">
-					<div style="display: flex; float: right; padding-top: 37px" class="icon">
+				<div class="col-lg-4 col-md-12 col-xs-12 ft">
+					<div class="icon">
 						<p class="icon-footer"><i class="fa fa-facebook fa-2x"></i></p>
 						<p class="icon-footer"><i class="fa fa-youtube fa-2x"></i></p>
 						<p class="icon-footer"><i class="fa fa-google fa-2x"></i></p>
@@ -87,6 +90,7 @@
 					</div>
 					<p class="Copyright"> Copyright © 2018 by VGSholding</p>
 				</div>
+			</div>
 			</div>
 		</div>
 	</footer>
