--- a/muave4.html
+++ b/muave4.html
@@ -24,10 +24,10 @@
 			<div class="container">
 				<div class="row">
 					<h1 style="text-align: center; font-weight: bold; text-transform: uppercase;font-size: 28px;" class="title-info">Vé xem của giải đấu 2019</h1>
-					<div style="padding-top: 0;"class="am"">
+					<div style="padding-top: 0;">
 						<p style="text-align: center;font-size: 24px;padding-top: 10px; font-weight: bold;color:  #0CACA7;">500.000 VND</p>
 					</div>
-					<div style="border:none" class="am"">
+					<div style="border:none; padding: 2%">
 						<p style="font-size: 18px;"><b>Thông tin đăng kí mua vé của bạn</b></p>
 					<div class="info-user">
 						<p>Họ và tên: Phí Minh Mạnh </p>
@@ -55,20 +55,21 @@
 	</div>
 	<footer>
 		<div class="all-box">
-			<div class="row">
-				<div class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
-					<div style="width: 173px; height: 105px;">
+			<div style="background: none" class="container">
+				<div class="row">
+				<div class="col-lg-2 col-md-12 col-sm-12 col-xs-12">
+					<div class="logo-footer">
 						<img src="img/logo-footer.png">
 					</div>
 				</div>
-				<div class="col-lg-6 col-md-6 col-xs-12">
+				<div class="col-lg-6 col-md-12 col-xs-12">
 					<h5 style="font-weight: bold"> Mọi thông tin, đóng góp vui lòng liên hệ:</h5>
 					<p><i class="fa fa-map-marker"></i> VGS Event - Tầng 2, 101 ngách 5, ngõ 92 Nguyễn Khánh Toàn, Cầu Giấy, Hà Nội</p>
 					<p><i class="fa fa-phone"></i> Hotline: 0988888888</p>
 					<p><i class="fa fa-envelope-square"></i> Email: sponsor@vgsholding.com</p>
 				</div>
-				<div class="col-lg-4 col-md-4 col-xs-12">
-					<div style="display: flex; float: right; padding-top: 37px" class="icon">
+				<div class="col-lg-4 col-md-12 col-xs-12 ft">
+					<div class="icon">
 						<p class="icon-footer"><i class="fa fa-facebook fa-2x"></i></p>
 						<p class="icon-footer"><i class="fa fa-youtube fa-2x"></i></p>
 						<p class="icon-footer"><i class="fa fa-google fa-2x"></i></p>
@@ -76,6 +77,7 @@
 					</div>
 					<p class="Copyright"> Copyright © 2018 by VGSholding</p>
 				</div>
+			</div>
 			</div>
 		</div>
 	</footer>
