--- a/truyvanthongtin.html
+++ b/truyvanthongtin.html
@@ -42,20 +42,21 @@
 	</div>
 	<footer>
 		<div class="all-box">
-			<div class="row">
-				<div class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
-					<div style="width: 173px; height: 105px;">
+			<div style="background: none" class="container">
+				<div class="row">
+				<div class="col-lg-2 col-md-12 col-sm-12 col-xs-12">
+					<div class="logo-footer">
 						<img src="img/logo-footer.png">
 					</div>
 				</div>
-				<div class="col-lg-6 col-md-6 col-xs-12">
+				<div class="col-lg-6 col-md-12 col-xs-12">
 					<h5 style="font-weight: bold"> Mọi thông tin, đóng góp vui lòng liên hệ:</h5>
 					<p><i class="fa fa-map-marker"></i> VGS Event - Tầng 2, 101 ngách 5, ngõ 92 Nguyễn Khánh Toàn, Cầu Giấy, Hà Nội</p>
 					<p><i class="fa fa-phone"></i> Hotline: 0988888888</p>
 					<p><i class="fa fa-envelope-square"></i> Email: sponsor@vgsholding.com</p>
 				</div>
-				<div class="col-lg-4 col-md-4 col-xs-12">
-					<div style="display: flex; float: right; padding-top: 37px" class="icon">
+				<div class="col-lg-4 col-md-12 col-xs-12 ft">
+					<div class="icon">
 						<p class="icon-footer"><i class="fa fa-facebook fa-2x"></i></p>
 						<p class="icon-footer"><i class="fa fa-youtube fa-2x"></i></p>
 						<p class="icon-footer"><i class="fa fa-google fa-2x"></i></p>
@@ -63,6 +64,7 @@
 					</div>
 					<p class="Copyright"> Copyright © 2018 by VGSholding</p>
 				</div>
+			</div>
 			</div>
 		</div>
 	</footer>
