--- a/vechungtoi1.html
+++ b/vechungtoi1.html
@@ -10,7 +10,100 @@
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <script src="js/jquery-3.3.1.min.js" type="text/javascript"></script>
 </head>
+<style type="text/css">
+	.close
+	{
+		opacity: 1;
+		padding: 5%;
+		margin: 1%;
+	}
+</style>
 <body>
+
+
+  <div style="margin-top: 5%; "class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog">
+      <div class="modal-content">
+          <button type="button" data-dismiss="modal" class="close"><i style="color: white;" class="fa fa-times"></i></button>
+          <h4 style="background: #0CACA7; color: white; padding: 2%; text-align: center; font-size: 20px; text-transform: uppercase;" class="modal-title">Lãnh đạo hội golf qua các thời kì</h4>
+        <div class="modal-body">
+          <div class="row">
+          		<div class="col-lg-6 col-xs-6">
+          			<p style="padding-top: 20%; padding-left: 5%;"><b>2016-2019</b></p>
+          		</div>
+          		<div class="col-lg-6 col-xs-6">
+          			<div class="leader-all-1">
+          				<div class="leader-img">
+          					<img src="img/l1.png">
+          				</div>
+          				<div class="leader-name">
+							<p>Chủ tích</p>
+							<p><b>Ông Lê Kiên Thành</b></p>
+          				</div>
+          			</div>
+          			<div class="leader-all-1">
+          				<div class="leader-img">
+          					<img src="img/l1.png">
+          				</div>
+          				<div class="leader-name">
+							<p>Chủ tích</p>
+							<p><b>Ông Lê Kiên Thành</b></p>
+          				</div>
+          			</div>
+          		</div>
+          		<hr style="clear: both;">
+          		<div class="col-lg-6 col-xs-6">
+          			<p style="padding-top: 20%; padding-left: 5%;"><b>2016-2019</b></p>
+          		</div>
+          		<div class="col-lg-6 col-xs-6">
+          			<div class="leader-all-1">
+          				<div class="leader-img">
+          					<img src="img/l1.png">
+          				</div>
+          				<div class="leader-name">
+							<p>Chủ tích</p>
+							<p><b>Ông Lê Kiên Thành</b></p>
+          				</div>
+          			</div>
+          			<div class="leader-all-1">
+          				<div class="leader-img">
+          					<img src="img/l1.png">
+          				</div>
+          				<div class="leader-name">
+							<p>Chủ tích</p>
+							<p><b>Ông Lê Kiên Thành</b></p>
+          				</div>
+          			</div>
+          		</div>
+          		<hr style="clear: both;">
+          		<div class="col-lg-6 col-xs-6">
+          			<p style="padding-top: 20%; padding-left: 5%;"><b>2016-2019</b></p>
+          		</div>
+          		<div class="col-lg-6 col-xs-6">
+          			<div class="leader-all-1">
+          				<div class="leader-img">
+          					<img src="img/l1.png">
+          				</div>
+          				<div class="leader-name">
+							<p>Chủ tích</p>
+							<p><b>Ông Lê Kiên Thành</b></p>
+          				</div>
+          			</div>
+          			<div class="leader-all-1">
+          				<div class="leader-img">
+          					<img src="img/l1.png">
+          				</div>
+          				<div class="leader-name">
+							<p>Chủ tích</p>
+							<p><b>Ông Lê Kiên Thành</b></p>
+          				</div>
+          			</div>
+          		</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 	<div class="header">
 		<div class="container-fluid">
 			<div class="row">
@@ -23,6 +116,7 @@
 		<h1 class="title-info">Gioi thieu</h1>
 		<div class="content">
 			<div class="vga">
+
 				<div class="row">
 					<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
 						<div class="img-vga">
@@ -31,24 +125,25 @@
 					</div>
 					<div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
 						<div class="vga-desc">
-							<p class="desc-title">Hiệp hội Golf Việt Nam (VGA)</p>
+							<p  class="desc-title">Hiệp hội Golf Việt Nam (VGA)</p>
 							<p class="desc-info"> Hiệp hội Golf Việt Nam (VGA) được thành lập theo Quyết định 1326/QĐ-BNV ngày 12 tháng 10 năm 2006 của Bộ Nội vụ. Là tổ chức xã hội nghề nghiệp, VGA được Bộ Văn hoá – Thể Thao – Du lịch giao trách nhiệm quản lý cao nhất về các hoạt động của ngành thể thao golf ở Việt Nam. Cho tới nay, VGA có các thành viên là hội golf địa phương, các câu lạc bộ golf và các sân golf trên khắp cả nước.</p>
-							<p class="leader-vga"><a href="#">LÃNH ĐẠO HIỆP HỘI GOLF VIỆT NAM QUA CÁC THỜI KỲ</a></p>
+							<p data-toggle="modal" data-target="#myModal" class="leader-vga"><a href="#">LÃNH ĐẠO HIỆP HỘI GOLF VIỆT NAM QUA CÁC THỜI KỲ</a></p>
 						</div>
 					</div>
 				</div>
+
 			</div>
 			<div class="vgs-group">
 				<div class="vgs-group-main">
 					<div class="row group">
-						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
 							<div class="img-vgs">
 								<img src="img/logo_holding.png">
 							</div>
 						</div>
-						<div class="col-lg-9 col-md-9 col-sm-9 col-xs-9">
+						<div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
 							<div class="vgs-desc">
-								<p class="desc-title">VGS group </p>
+								<p style="font-size: 20px;"  class="desc-title-1"><b>VGS group</b> </p>
 								<p>VGS GROUP với 4 công ty thành viên:</p>
 								<p>- VGS Holding</p>
 								<p>- VGS Media</p>
@@ -82,12 +177,13 @@
 								</div>
 								<div class="vgsholding-content">
 									<p class="vgs-holding-title">
-									Công ty cổ phần dịch vụ truyền thông golf Việt Nam (VGS Media)
+									 Công ty cổ phần dịch vụ golf Việt Nam (VGS Holding)
 									</p>
 									<p class="vgs-holding-desc">
-										Thành lập ngày 27/01/2018, từ những nhân sự chủ chốt tại các công ty hoạt động trong lĩnh vực công nghệ thông tin/ nội dung số/ mạng xã hội và truyền thông multimedia, đồng thời hiểu biết sâu sắc về thị trường Golf tại Việt nam; VGS Media (trang tin điện tử Golfnews.vn) có nền tảng vững chắc để xây dựng nên những kênh truyền thông về Golf một cách chuyên nghiệp cùng những giải pháp công nghệ hỗ trợ ngành Golf
+										 Thành lập ngày 22/12/2016, với sứ mệnh xây dựng nền tảng công nghệ cho hệ thống tính điểm chấp Handicap quốc gia; VGS Holding sở hữu các giải pháp công nghệ, kỹ thuật tiên tiến nhất và là đơn vị vận hành Vhandicap – Hệ thống Handicap đầu tiên và duy nhất của Việt Nam được thế giới công nhận.
 									</p>
-									<p> Năm 2019, VGS Media có thêm kênh truyền hình trực tuyến - GolfnewsTV</p>
+									<p>Vhandicap ra đời ngày 25/12/2017</p>
+									<p> Ứng dụng này đã được đăng ký bản quyền và công bố ngày 01/01/2018</p>
 								</div>
 							</div>
 						</div>
@@ -98,11 +194,13 @@
 								</div>
 								<div class="vgsholding-content">
 									<p class="vgs-holding-title">
-									  Công ty cổ phần dịch vụ tổ chức sự kiện Golf Việt Nam (VGS Event)
+									 Công ty cổ phần dịch vụ golf Việt Nam (VGS Holding)
 									</p>
 									<p class="vgs-holding-desc">
-										Thành lập ngày 08/03/2019, với nền tảng kinh nghiệm, công nghệ và am hiểu sâu sắc về thị trường golf Việt Nam; VGS Event đã tổ chức thành công nhiều giải đấu Golf lớn, quy mô quốc gia, câu lạc bộ và các sự kiện đặt hàng khác.
+										 Thành lập ngày 22/12/2016, với sứ mệnh xây dựng nền tảng công nghệ cho hệ thống tính điểm chấp Handicap quốc gia; VGS Holding sở hữu các giải pháp công nghệ, kỹ thuật tiên tiến nhất và là đơn vị vận hành Vhandicap – Hệ thống Handicap đầu tiên và duy nhất của Việt Nam được thế giới công nhận.
 									</p>
+									<p>Vhandicap ra đời ngày 25/12/2017</p>
+									<p> Ứng dụng này đã được đăng ký bản quyền và công bố ngày 01/01/2018</p>
 								</div>
 							</div>
 						</div>
@@ -113,11 +211,13 @@
 								</div>
 								<div class="vgsholding-content">
 									<p class="vgs-holding-title">
-									  Công ty cổ phần dịch vụ tổ chức sự kiện Golf Việt Nam (VGS Event)
+									 Công ty cổ phần dịch vụ golf Việt Nam (VGS Holding)
 									</p>
 									<p class="vgs-holding-desc">
-										Thành lập ngày 08/03/2019, với nền tảng kinh nghiệm, công nghệ và am hiểu sâu sắc về thị trường golf Việt Nam; VGS Event đã tổ chức thành công nhiều giải đấu Golf lớn, quy mô quốc gia, câu lạc bộ và các sự kiện đặt hàng khác.
+										 Thành lập ngày 22/12/2016, với sứ mệnh xây dựng nền tảng công nghệ cho hệ thống tính điểm chấp Handicap quốc gia; VGS Holding sở hữu các giải pháp công nghệ, kỹ thuật tiên tiến nhất và là đơn vị vận hành Vhandicap – Hệ thống Handicap đầu tiên và duy nhất của Việt Nam được thế giới công nhận.
 									</p>
+									<p>Vhandicap ra đời ngày 25/12/2017</p>
+									<p> Ứng dụng này đã được đăng ký bản quyền và công bố ngày 01/01/2018</p>
 								</div>
 							</div>
 						</div>
@@ -126,9 +226,10 @@
 			</div>
 		</div>
 	</div>
-	<footer>
+<footer>
 		<div class="all-box">
-			<div class="row">
+			<div style="background: none" class="container">
+				<div class="row">
 				<div class="col-lg-2 col-md-12 col-sm-12 col-xs-12">
 					<div class="logo-footer">
 						<img src="img/logo-footer.png">
@@ -150,7 +251,9 @@
 					<p class="Copyright"> Copyright © 2018 by VGSholding</p>
 				</div>
 			</div>
+			</div>
 		</div>
 	</footer>
+	  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </body>
 </html>
