--- a/taitro.html
+++ b/taitro.html
@@ -160,7 +160,8 @@
 	</div>
 	<footer>
 		<div class="all-box">
-			<div class="row">
+			<div style="background: none" class="container">
+				<div class="row">
 				<div class="col-lg-2 col-md-12 col-sm-12 col-xs-12">
 					<div class="logo-footer">
 						<img src="img/logo-footer.png">
@@ -181,6 +182,7 @@
 					</div>
 					<p class="Copyright"> Copyright © 2018 by VGSholding</p>
 				</div>
+			</div>
 			</div>
 		</div>
 	</footer>
