--- a/videogiaidau.html
+++ b/videogiaidau.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <script src="js/jquery-3.3.1.min.js" type="text/javascript"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
 <body>
 	<div class="header">
@@ -19,94 +20,126 @@
 		</div>
 	</div>
 	<div class="all-box">
-		<h1 class="title-info">Video giải đấu</h1>
+		<h2 class="title-info">Video giải đấu</h2>
 		<div class="content">
 			<div class="container">
 				<div style="margin: 0px auto;" class="row">
 					<div class="slide">
 						<div class="banner-left">
-							<img src="img/bn1.png">
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner">
+      <div class="item active">
+      <img src="img/bn1.png">
+      </div>
+
+      <div class="item">
+      <img src="img/bn1.png">
+      </div>
+    
+      <div class="item">
+       <img src="img/bn1.png">
+      </div>
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+					
 						</div>
 						<div class="banner-right">
 							<div class="banner-right1">
 								<img src="img/bn2.png">
-								<div class="banner-right-title1"><p>Matt Wallace dẫn đầu BMW PGA Championship, Rory Mcllroy thi đấu tệ</p></div>
+								<div class="banner-right-title1"><a href="#"><p>Matt Wallace dẫn đầu BMW PGA Championship, Rory Mcllroy thi đấu tệ</p></a></div>
 							</div>
 							<div class="banner-right1 stm">
 								<img src="img/bn2.png">
-								<div class="banner-right-title1"><p>Matt Wallace dẫn đầu BMW PGA Championship, Rory Mcllroy thi đấu tệ</p></div>
+								<div class="banner-right-title1"><a href="#"><p>Matt Wallace dẫn đầu BMW PGA Championship, Rory Mcllroy thi đấu tệ</p></a></div>
 							</div>
 						</div>
 					</div>
 				</div>
-				<div style="margin: 0px auto" class="row">
-					<div class="all-video">
-						<div class="video-main">
+				<div class="row">
+						<div class="video-main col-lg-4 col-md-4 col-sm-4 col-xs-6">
 							<img src="img/video.png">
 							<p><b>Bản tin 365</b></p>
 							<p>1 ngày trước</p>
 						</div>
-						<div class="video-main">
+						<div class="video-main col-lg-4 col-md-4 col-sm-4 col-xs-6">
 							<img src="img/video.png">
 							<p><b>Bản tin 365</b></p>
 							<p>1 ngày trước</p>
 						</div>
-						<div class="video-main">
+						<div class="video-main col-lg-4 col-md-4 col-sm-4 col-xs-6">
 							<img src="img/video.png">
 							<p><b>Bản tin 365</b></p>
 							<p>1 ngày trước</p>
 						</div>
-						<div class="video-main">
+						<div class="video-main col-lg-4 col-md-4 col-sm-4 col-xs-6">
 							<img src="img/video.png">
 							<p><b>Bản tin 365</b></p>
 							<p>1 ngày trước</p>
 						</div>
-						<div class="video-main">
+						<div class="video-main col-lg-4 col-md-4 col-sm-4 col-xs-6">
 							<img src="img/video.png">
 							<p><b>Bản tin 365</b></p>
 							<p>1 ngày trước</p>
 						</div>
-						<div class="video-main">
+						<div class="video-main col-lg-4 col-md-4 col-sm-4 col-xs-6">
 							<img src="img/video.png">
 							<p><b>Bản tin 365</b></p>
 							<p>1 ngày trước</p>
 						</div>
-						<div class="video-main">
+						<div class="video-main col-lg-4 col-md-4 col-sm-4 col-xs-6">
 							<img src="img/video.png">
 							<p><b>Bản tin 365</b></p>
 							<p>1 ngày trước</p>
 						</div>
-						<div class="video-main">
+						<div class="video-main col-lg-4 col-md-4 col-sm-4 col-xs-6">
 							<img src="img/video.png">
 							<p><b>Bản tin 365</b></p>
 							<p>1 ngày trước</p>
 						</div>
-						<div class="video-main">
+						<div class="video-main col-lg-4 col-md-4 col-sm-4 col-xs-6">
 							<img src="img/video.png">
 							<p><b>Bản tin 365</b></p>
 							<p>1 ngày trước</p>
 						</div>
-					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-	<footer>
+<footer>
 		<div class="all-box">
-			<div class="row">
-				<div class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
-					<div style="width: 173px; height: 105px;">
-						<img src="img/logo-footer.png">
+			<div style="background: none" class="container">
+				<div class="row">
+				<div class="col-lg-2 col-md-12 col-sm-12 col-xs-12">
+					<div class="logo-footer">
+						<img src="img/logo-footer.png"> 
 					</div>
 				</div>
-				<div class="col-lg-6 col-md-6 col-xs-12">
+				<div class="col-lg-6 col-md-12 col-xs-12">
 					<h5 style="font-weight: bold"> Mọi thông tin, đóng góp vui lòng liên hệ:</h5>
 					<p><i class="fa fa-map-marker"></i> VGS Event - Tầng 2, 101 ngách 5, ngõ 92 Nguyễn Khánh Toàn, Cầu Giấy, Hà Nội</p>
 					<p><i class="fa fa-phone"></i> Hotline: 0988888888</p>
 					<p><i class="fa fa-envelope-square"></i> Email: sponsor@vgsholding.com</p>
 				</div>
-				<div class="col-lg-4 col-md-4 col-xs-12">
-					<div style="display: flex; float: right; padding-top: 37px" class="icon">
+				<div class="col-lg-4 col-md-12 col-xs-12 ft">
+					<div class="icon">
 						<p class="icon-footer"><i class="fa fa-facebook fa-2x"></i></p>
 						<p class="icon-footer"><i class="fa fa-youtube fa-2x"></i></p>
 						<p class="icon-footer"><i class="fa fa-google fa-2x"></i></p>
@@ -114,6 +147,7 @@
 					</div>
 					<p class="Copyright"> Copyright © 2018 by VGSholding</p>
 				</div>
+			</div>
 			</div>
 		</div>
 	</footer>
